--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
   },
   "license": "MIT",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "morgan": "~1.9.1",
-    "nodemon": "^2.0.2",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.1",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4"
+    "@babel/preset-env": "^7.8.4",
+    "browserify": "^16.5.1",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "dropzone": "^5.7.0",
+    "express": "~4.16.1",
+    "mime": "^2.4.5",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.2",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.1"
   },
   "devDependencies": {
     "jest": "^25.1.0"
@@ -26,12 +30,15 @@
     "exec": "npm run dev",
     "watch": [
       "server/*",
-      "public/*"
+      "public/*",
+      "src/*",
+      "public/index.html"
     ],
     "ignore": [
       "**/__tests__/**",
       "*.test.js",
-      "*.spec.js"
+      "*.spec.js",
+      "**/src/tmp/**"
     ]
   },
   "babel": {
@@ -48,7 +55,7 @@
     "server": "node ./dist-server/bin/www",
     "dev": "NODE_ENV=development npm-run-all build server",
     "prod": "NODE_ENV=production npm-run-all build server",
-    "transpile": "babel ./server --out-dir dist-server",
+    "transpile": "babel ./server --out-dir dist-server && babel ./src/converter.js --out-dir ./src/tmp && browserify ./src/tmp/converter.js -o ./dist-server/bin/converter.js && cp -rf ./src/lib ./dist-server",
     "clean": "rimraf dist-server",
     "watch:dev": "nodemon",
     "test": "jest"
